<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/contacts_nav_menu"
            android:icon="@drawable/contacts_icon"
            android:title="@string/contacts_nav">
        </item>
        <item
            android:id="@+id/chats_nav_menu"
            android:icon="@drawable/chat_icon"
            android:title="@string/channels_nav">
        </item>
        <item
            android:id="@+id/settings_nav_menu"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings_nav">
        </item>
        <item
            android:id="@+id/help_nav_menu"
            android:icon="@drawable/help_icon"
            android:title="@string/help_nav">
        </item>

    </group>

    <item android:title="">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/about_nav_menu"
            android:icon="@drawable/about_icon"
            android:title="@string/about_nav"/>
        <item
            android:id="@+id/logout_nav_menu"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout_nav"/>

    </group>
    </item>
</menu>